--- a/css/proyects.css
+++ b/css/proyects.css
@@ -1,25 +1,150 @@
-@import url(./nikko.css);
-@import url(./marvol.css);
-@import url(./spotifu.css);
-.proyects {
-	background: var(--white);
+.projects {
+	background: white;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 }
-
-.proyects-container {
-	padding-block-start: 2.5rem;
-}
-
-.proyects-container h4 {
-	font: var(--headline4);
+.projects > h3 {
 	color: var(--primary);
-	text-align: center;
-	padding-block-end: 1.5rem;
+	font: var(--headline1);
+	margin: 0;
+	margin-block-start: 5rem;
+	margin-block-end: 2.5rem;
+}
+
+.projects-menu {
+	display: flex;
+	gap: 1.5rem;
+}
+
+.content {
+	display: flex;
+	flex-direction: column;
+	gap: 1rem;
+}
+
+.content h1 {
 	margin: 0;
 }
 
-.proyects-menu {
-	display: flex;
-	flex-direction: row;
-	justify-content: space-between;
-	padding-block-end: 4rem;
+.content.is-secondary h1 {
+	color: var(--primary);
+	font: var(--headline4);
+}
+
+.content p {
+	font: var(--body1);
+	margin: 0;
+}
+
+@media screen and (max-width: 1023px) {
+	.project-container {
+		display: grid;
+		grid-template-columns: 1rem 0.7rem 17.75rem 1.25rem;
+		grid-template-rows: 18rem 1rem auto 1rem;
+	}
+
+	.projects {
+		inline-size: 100%;
+		display: flex;
+		flex-direction: column;
+		gap: 5.5rem;
+		padding-block-end: 10rem;
+	}
+
+	.project-container .img {
+		grid-column: 3/-1;
+	}
+
+	.project-container .img img {
+		inline-size: 19rem;
+		block-size: 19rem;
+	}
+
+	.project-container .content {
+		grid-column: 1/4;
+		grid-row: 2/4;
+		padding-block: 4rem;
+		padding-inline: 1.5rem;
+		z-index: 1;
+	}
+
+	.content-bg {
+		grid-column: 3/-1;
+		grid-row: 2/-1;
+	}
+	.project-buttons {
+		display: flex;
+		flex-direction: column;
+		gap: 1rem;
+		padding-block-start: 1rem;
+	}
+}
+
+@media screen and (min-width: 64rem) {
+	.projects {
+		padding-block-end: 25rem;
+	}
+	.project-container {
+		block-size: 27.5rem;
+		inline-size: 58.5rem;
+		margin: auto;
+		margin-block-start: 8rem;
+		display: grid;
+		grid-template-rows: 5.875rem 1rem 15rem 5.6875rem 1rem;
+		grid-template-columns: 19rem 1rem 1.875rem 36.625rem 1rem;
+	}
+
+	.project-container:first-child {
+		margin-block-start: 0;
+	}
+
+	.project-container .img {
+		block-size: 21.8rem;
+		inline-size: 21.8rem;
+		grid-column-start: 1;
+		grid-column-end: 4;
+		z-index: 2;
+	}
+
+	.content {
+		grid-column: 2/5;
+		grid-row: 2/5;
+		z-index: 1;
+		padding-inline-start: 4.375rem;
+		padding-inline-end: 1.5rem;
+		padding-block: 4rem;
+	}
+
+	.content-bg {
+		grid-column: 3/6;
+		grid-row: 3/6;
+	}
+
+	.project-container:nth-of-type(odd) {
+		grid-template-rows: 5.875rem 1rem 15rem 5.6875 1rem;
+		grid-template-columns: 1rem 36.625rem 1rem 1.875rem 1fr;
+	}
+
+	.project-container:nth-of-type(odd) > .img {
+		grid-column: 3/6;
+	}
+
+	.project-container:nth-of-type(odd) > .content {
+		grid-column: 2/4;
+		grid-row: 2/5;
+		padding-inline-start: 1.5rem;
+		padding-inline-end: 4.375rem;
+	}
+
+	.project-container:nth-of-type(odd) > .content-bg {
+		grid-column: 1/3;
+		grid-row: 3/6;
+	}
+	.project-buttons {
+		display: flex;
+		gap: 1rem;
+		padding-block-start: 1rem;
+	}
 }
