--- a/css/testimonials.css
+++ b/css/testimonials.css
@@ -55,6 +55,9 @@
 	inline-size: 5rem;
 	z-index: 3;
 }
+.testimonials {
+	padding-block-end: 5.5rem;
+}
 
 .testimonial-main-content {
 	block-size: 100%;
@@ -86,4 +89,41 @@
 }
 .testimonial-bg.is-secondary {
 	background: var(--secondary);
+}
+
+@media screen and (min-width: 64rem) {
+	.testimonial:last-child {
+		padding-block-end: 6rem;
+	}
+	.testimonials-wrapper {
+		inline-size: 90%;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+	}
+	.testimonials-container {
+		display: grid;
+		grid-template-columns: 1fr 1.5rem 1fr;
+		grid-template-rows: auto repeat(2 300px);
+	}
+	.testimonial-title {
+		grid-column: 1/3;
+		grid-row: 1/2;
+	}
+	.testimonial-title h4 {
+		font: var(--headline1);
+		margin: 0;
+		padding: 0;
+		padding-block-end: 6rem;
+	}
+
+	.testimonial {
+		grid-column: 1/2;
+		padding-block-end: 6rem;
+	}
+
+	.testimonial:nth-of-type(even) {
+		grid-column: 3/4;
+	}
 }
