--- a/css/proyects.css
+++ b/css/proyects.css
@@ -4,8 +4,9 @@
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+	inline-size: 100%;
 }
-.projects > h3 {
+.projects h3 {
 	color: var(--primary);
 	font: var(--headline1);
 	margin: 0;
@@ -45,11 +46,20 @@
 		grid-template-rows: 18rem 1rem auto 1rem;
 	}
 
+	.projects h3 {
+		font: var(--headline4);
+		margin: 0;
+		padding-block: 2.5rem;
+	}
+
+	.projects-menu {
+		padding-block-end: 8rem;
+	}
+
 	.projects {
 		inline-size: 100%;
 		display: flex;
 		flex-direction: column;
-		gap: 5.5rem;
 		padding-block-end: 10rem;
 	}
 
@@ -79,6 +89,13 @@
 		flex-direction: column;
 		gap: 1rem;
 		padding-block-start: 1rem;
+	}
+	.project-container {
+		padding-block-end: 5.5rem;
+	}
+
+	.project-container:last-child {
+		padding-block-end: 0;
 	}
 }
 
